updated to dynamic media path

--- a/harness/opsm.html
+++ b/harness/opsm.html
@@ -39,7 +39,7 @@ figure {
     
 <script id="btnPlay" type="text/ractive">
     <button class="btn-play" on-click="videotoggle">
-        <svg width='66px' height='66px' version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         viewBox="0 0 67 69" style="enable-background:new 0 0 67 69;" xml:space="preserve">
     <desc>Created with Lunacy</desc>
     <g id="Pause-Button" transform="translate(0.5 0.5)">
@@ -64,7 +64,7 @@ figure {
 </script>     
 <script id="btnCaptions" type="text/ractive">
     <button class="btn-captions" on-click="toggle" {{#if disabled}}disabled{{/if}} >
-        <svg width="67px" height="67px" viewBox="0 0 67 67" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+        <svg viewBox="0 0 67 67" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
             <desc>Created with Lunacy</desc>
             <g transform="translate(0.5 0.5)">
                 {{#if active}}
@@ -89,7 +89,7 @@ figure {
 </script>
 <script id="btnMute" type="text/ractive">
     <button class="btn-mute" on-click="toggle">
-        <svg width="67px" height="69px" viewBox="0 0 67 69" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+        <svg viewBox="0 0 67 69" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
             <desc>Created with Lunacy</desc>
             <g transform="translate(0.5 0.5)">
               <g transform="translate(0 0.4799812)">
